--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Personal App</string>
     <string name="button_show">Мои данные</string>
+    <string name="button_my_photo">Мои фотографии</string>
 </resources>
